# d7020e_lab3_mael

./: .gitignore  Cargo.toml  README.md  WSL.md  build.rs  ex2.objdump  ex3_fail.txt  memory.x  new
.cargo/: config.toml
ex5/: .gitignore  Cargo.toml  README.md  run_task
ex5/src/: main.rs
examples/: EX1_README.md  EX2_README.md  EX3_README.md  EX4_README.md  ex1.rs  ex2.rs  ex3.rs  ex4.rs
