[package]
name = "d7020e_lab3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
rp2040-hal = { version = "0.9", features = ["rt", "critical-section-impl"] }
symex_lib = { git = "https://github.com/s7rul/symex", branch = "armv6-m" }
valid_derive = { git = "https://github.com/s7rul/symex" }
panic-halt = "0.2.0"
cortex-m-rt = "0.7"

[profile.release]
overflow-checks = true
debug = 2              # force debug symbols even in optimized code
