[package]
name = "d7020e_lab3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm","critical-section-single-core"] }
cortex-m-rt = "0.7.3"
# symex_lib = { git = "https://github.com/s7rul/symex", branch = "armv6-m" }
# valid_derive = { git = "https://github.com/s7rul/symex" }
symex_lib = { path = "../symex/crates/symex_lib"  }
valid_derive = { path = "../symex/crates/valid_derive" }
panic-halt = "0.2.0"

defmt = "0.3"

[dependencies.nrf52840-hal] 
features = ["rt"]
version = "0.16.1"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true 
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true 

